2009-03-20  John Dallaway  <john@dallaway.org.uk>

	* doc/redboot_cmds.sgml: Add note concerning the termination of
	ELF downloads once all relevant sections have been transferred.
	[ Bugzilla 1000711 ]

	* doc/redboot_main.sgml: Update copyright notice.

	* src/main.c (do_baud_rate): Wait for 10s when changing serial
	baud to accommodate terminal emulators which do not provide
	rapid access to this parameter.

	* src/main.c (do_version): Tidy RAM availability message.
	[ Bugzilla 1000712 ]

2009-03-09  Gary Thomas  <gary@mlbassoc.com>

	* src/io.c: Better handling of history - commands now have
	a [fixed] virtual number over time.  This makes !nn work correctly.
	Fixes BZ#1000714

2009-03-04  Gary Thomas  <gary@mlbassoc.com>

	* src/fconfig.c (get_config): Simplify memcpy() call to
	work around GCC 4.3 code generation error.  BZ#1000672

2009-02-20  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/flash.c (do_flash_init): Call cyg_flash_init() with
	NULL argument.

2009-02-19  John Dallaway  <john@dallaway.org.uk>

	* src/main.c: Update copyright notice.

2009-02-19  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/flash.c (do_flash_init): Update for minor flash API
        mod to call cyg_flash_set_global_printf() to set printf
        function.

2009-02-06  John Dallaway  <john@dallaway.org.uk>

	* cdl/redboot.cdl: Fix documentation reference.

2008-11-20  Bart Veer  <bartv@ecoscentric.com>

	* src/fconfig.c (flash_lookup_config): add a sanity check to
	reduce the risk of RedBoot going into an infinite loop.

2008-11-16  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/redboot.cdl, src/flash.c, src/fconfig.c:
	Flash-related eCosCentric changes to these files (including a
	merge of the flashv2 work) have been merged. Changes have been
	directly interleaved below on the correct dates.

2008-11-14  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/flash.c (fis_lock): Revert patch of 2005-10-05 which disabled